# isae-pir-projects

./: .gitignore  createfigure.m  matlab.mat  my_example.cpp
matlab/Main/: main_laser_line.m  main_rotation_speed.m  main_tracking.m  main_velocity_profile.asv  main_velocity_profile.m  parameters_tracking.m  try_what_u_want_here.m
matlab/PTV_algorithm/: display_picture.m
matlab/PTV_algorithm/1-acquisition/: acquisition.m
matlab/PTV_algorithm/2-mask/: isUnderMask.m  keep_shearing_band.m  mask.m
matlab/PTV_algorithm/3-detection/: detect_particles.m  display_particles.m  display_rg.m  filter_size_bright.m  test_sub_pixel_accuracy.m  treat_image.m
matlab/PTV_algorithm/4-tracking/: display_track_nb.m  display_tracks.m  track_particles.m
matlab/PTV_algorithm/5-exploitation/data_tracking/: display_data_tracking.m  get_data_tracking.m
matlab/PTV_algorithm/5-exploitation/interpolation/: calculate_radius_cell.m  interpolate_average.m  interpolate_traj.m  plot_circle.m
matlab/PTV_algorithm/5-exploitation/laser_profil/: build_profil.m  check_rectangular_mask.m  compute_average_profile.m  display_laser_profile.m  display_laser_profile_in_time.m  get_GIF.m
matlab/PTV_algorithm/5-exploitation/velocity/: Vel_region_time.m  compute_ang_velocity.m  compute_new_tr.m  compute_velocity.m  display_Vel_error_bars.asv  display_Vel_error_bars.m  display_Vel_region_time.asv  display_Vel_region_time.m  display_velocity.m  display_velocity_in_time.m  get_data_omega_skipstep.m  mean_region_same_beginning.m  mean_velocity.m  old_velo_time.m  profile_for_different_rotation_speed.m  select_radius.m  smooth_pos.m
matlab/PTV_algorithm/6-perspective_correction/: XYZ2uv.m  uv2XYZ.m
simulations/: CMakeLists.txt  my_example.cpp  run.cpp  set_beads.cpp  writefile.cpp
simulations/shared/: CMakeLists.txt  ProjArchive.cpp  ProjDataPath.cpp  ProjDataPath.h  ProjLog.cpp  ProjLog.h  ProjShape.cpp  ProjShape.h  ProjWriteData.cpp  ProjWriteData.h
simulations/taylor-couette/: CMakeLists.txt  test_tc_rmg.cpp  test_tc_run.cpp  test_tc_set.cpp
